remote/gleamlang-ws-server/k8s/cluster/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: presence
  labels:
    name: presence
    purpose: websocket-presence-fanout
